[package]
description = "Standalone `mommy` binary, fork of cargo-mommy"
repository = "https://github.com/Gankra/cargo-mommy"
license = "MIT OR Apache-2.0"
name = "mommy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5" }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
